--- a/ThoVietNam/assets/web/benkiasongduong.html
+++ b/ThoVietNam/assets/web/benkiasongduong.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
+<script type="text/javascript" src="snowstorm.js"></script>
 </head>
 
 <body>
